tests/output/self_hosted/undef_type_error.txt
tests/undef_type_error.oomph:1: error: no type named 'Bar'

    func foo(Bar b):
             ^^^

